--- a/frontend/src/styles/components/_navbar.scss
+++ b/frontend/src/styles/components/_navbar.scss
@@ -1,38 +1,36 @@
 .navbar {
-    background: black;
-    color: white;
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-    // flex-wrap: nowrap;
+  background: black;
+  color: white;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav__brand {
-    display: inline;
+  display: inline;
 }
 
 .nav__links {
-    // background-color: purple;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 60%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 60%;
 }
 
 .nav__item {
-    font-size: 1.3rem;
-    order: 1;
-    position: relative;
-    display: block;
-    width: auto;
-    text-decoration: none
+  font-size: 1.3rem;
+  order: 1;
+  position: relative;
+  display: block;
+  width: auto;
+  text-decoration: none;
 }
 
 .nav__item:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.nav__item:visited{
-    color: grey;
+.nav__item:visited {
+  color: grey;
 }
