WIP Landing Page. Created line break, featured project box, buttons, navbar and footer. Next work is font.

--- a/frontend/src/styles/base/_settings.scss
+++ b/frontend/src/styles/base/_settings.scss
@@ -1,4 +1,5 @@
 // Color
-$form-background : white;
-$button-color: #FBD87F;
+$background: "#f2f2f2";
+$form-background: white;
+$button-color: #fbd87f;
 $title-fontsize: 3em;
