--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -4,3 +4,5 @@
 @import './components/navbar';
 @import './components/buttons';
 @import './components/landing';
+@import './components/SignLogNewForms';
+@import './components/vertNav';
