--- a/frontend/src/styles/components/_container.scss
+++ b/frontend/src/styles/components/_container.scss
@@ -13,16 +13,17 @@
 
 .form-container {
     background-color: $form-background;
-    border: 0.1rem solid black;
-    margin: 0 auto;
+   // border: 0.1rem solid black;
+   // margin: 0 auto;
+   margin-left: 20px;
     text-align: left;
     width: 55rem;
+    display: inline-block;
     //display: block;
     //width: 40%;
     padding: 1rem 0 ;
-   
-    
     padding-left: 20px;
+    max-height: 900px;
     
 }
 
