committing newprojectform and styles.scss

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -6,3 +6,5 @@
 @import './components/landing';
 @import './components/SignLogNewForms';
 @import './components/vertNav';
+@import './components/newForm';
+
