committing app, index, _container, and _newForm

--- a/frontend/src/styles/components/_container.scss
+++ b/frontend/src/styles/components/_container.scss
@@ -1,43 +1,37 @@
 .container {
-  max-width: 70vw;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.auth-form-container {
-  background-color: $form-background;
-  border: 0.1rem solid black;
-  margin: 0 auto;
-  padding: 1rem 0;
-  max-width: 30rem;
+    //max-width: 70rem;
+    width: 1920px;
+    //height: 1080px;
+    height: 1080px;
+    margin: 0 auto;
+    text-align: center;
+    background: #F2F2F2;
+    overflow: hidden; 
+    
 }
 
 .form-container {
-  background-color: $form-background;
-  border: 0.1rem solid black;
-  margin: 1rem auto;
-  padding-bottom: 1rem;
-  max-width: 40rem;
+    background-color: $form-background;
+    border: 0.1rem solid black;
+    margin: 0 auto;
+    text-align: left;
+    width: 55rem;
+    //display: block;
+    //width: 40%;
+    padding: 1rem 0 ;
+   
+    
+    padding-left: 20px;
+    
 }
 
 .buttons-container {
-  width: 30rem;
-  border: 0.1rem solid black;
-  padding: 1rem 0;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  background: black;
+    width: 30.2rem;
+    padding: 1rem 0;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background: black;
 }
 
-.checkbox-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  padding: 1rem 4rem;
-}
-
-.flex-box {
-  display: flex;
-  justify-content: space-around;
-}
