--- a/frontend/src/styles/components/_newForm.scss
+++ b/frontend/src/styles/components/_newForm.scss
@@ -35,8 +35,8 @@
     text-align: left;
 }
 .rightCon{
-    //border: 1px solid #292929;
-    //box-sizing: border-box;
+    border: 1px solid #292929;
+    box-sizing: border-box;
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 200px;
