revert file conflict attempts

--- a/frontend/src/styles/base/_settings.scss
+++ b/frontend/src/styles/base/_settings.scss
@@ -1,5 +1,4 @@
 // Color
-$background: "#f2f2f2";
-$form-background: white;
-$button-color: #fbd87f;
+$form-background : white;
+$button-color: #FBD87F;
 $title-fontsize: 3em;
