--- a/frontend/src/styles/components/SignLogNewForms.scss
+++ b/frontend/src/styles/components/SignLogNewForms.scss
@@ -49,4 +49,19 @@
     padding: 20px;
 }
 
+/*This was used only in new project form along with signContainer above*/
+.labelCon{
+    width: 30%;
+    float: left;
+    text-align: left;
+    margin-left: 10px;
+}
+
+.textRight{
+    width: 65%;
+    text-align: left;
+    float:left;
+}
+
+
 
