--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -1,35 +1,45 @@
 .medium-glowing-button {
-  width: 8rem;
-  height: 3rem;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  color: #000;
-  background-color: white;
-  border: none;
-  border-radius: 2.8rem;
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+    // background: $button-color;
+    width: 8rem;
+    height: 3rem;
+    // font-family: 'Roboto', sans-serif;
+    // font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    // font-weight: 500;
+    color: #000;
+    background-color: white;
+    border: none;
+    border-radius: 2.8rem;
+    // box-shadow: 0px 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
 }
 
 .medium-glowing-button:hover {
-  background-color: #2ee59d;
+    background-color: #2EE59D;
+    color: #fff;
 }
 
 .medium-glowing-button:disabled {
-  background-color: #2ee59d;
+    color: black;
+    background-color: #2EE59D;
+    transform: none;
 }
 
 .submit-button {
-  color: black;
-  background-color: #2ee59d;
-  width: 8rem;
-  height: 3rem;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  border: none;
-  border-radius: 2.8rem;
-  cursor: pointer;
-  outline: none;
-  margin-top: 1rem;
+    color: black;
+    background-color: #2EE59D;
+    width: 8rem;
+    height: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    border: none;
+    border-radius: 2.8rem;
+    cursor: pointer;
+    outline: none;
+    margin-top: 1rem;
 }
+
+
