--- a/frontend/src/styles/components/_navbar.scss
+++ b/frontend/src/styles/components/_navbar.scss
@@ -1,41 +1,38 @@
 .navbar {
-  background: black;
-  color: white;
-  margin: 0;
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: nowrap;
+    background: black;
+    color: white;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    // flex-wrap: nowrap;
 }
 
-.nav__logo {
-  display: inline;
-  order: 0;
-  justify-content: flex-start;
-  text-decoration: none;
-  margin: 0 2rem;
+.nav__brand {
+    display: inline;
 }
 
 .nav__links {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: flex-end;
-  align-items: center;
-  width: 70%;
+    // background-color: purple;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 60%;
 }
 
 .nav__item {
-  font-size: 1.3rem;
-  position: relative;
-  display: block;
-  width: auto;
-  text-decoration: none;
-  margin: 1.5rem;
+    font-size: 1.3rem;
+    order: 1;
+    position: relative;
+    display: block;
+    width: auto;
+    text-decoration: none
 }
 
 .nav__item:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
-.nav__item:visited {
-  color: grey;
+.nav__item:visited{
+    color: grey;
 }
