--- a/frontend/src/styles/components/_vertNav.scss
+++ b/frontend/src/styles/components/_vertNav.scss
@@ -1,13 +1,7 @@
 .vertCon{
-    width: 250px;
-    height: 1080px;
-    //text-align: center;
+    width: 200px;
+    height: 768px;
+    text-align: center;
     background-color: white;
-    margin-left: 200px;
-}
-
-.username-container{
-    border: 1px solid #292929;
-    box-sizing: border-box;
-    align-items: stretch;
+    
 }
