--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,9 +1,10 @@
-@import "./base/settings";
-@import "./base/base";
-@import "./components/container";
-@import "./components/navbar";
-@import "./components/buttons";
-@import "./components/landing";
-@import "./components/SignLogNewForms";
-@import "./components/vertNav";
-@import "./components/forms";
+@import './base/settings';
+@import './base/base';
+@import './components/container';
+@import './components/navbar';
+@import './components/buttons';
+@import './components/landing';
+@import './components/SignLogNewForms';
+@import './components/vertNav';
+@import './components/newForm';
+
